# gtest_sample

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/calculate/: calculate.cpp  calculate.hpp
test/: CMakeLists.txt  calculateTest.cpp
